<resources>
    <string name="app_name">Chamedoon</string>
    <string name="app_name_persian">چَمِدون</string>
    <string name="eror_in_connection">خطا در اتصال به اینترنت</string>
    <string name="title_home">خانه</string>
    <string name="title_dashboard">حساب کاربری</string>
    <string name="title_notifications">آفرهای ویژه</string>
    <string name="toor">تور</string>
    <string name="flight">پرواز</string>
    <string name="bus">اتوبوس</string>
    <string name="train">قطار</string>
    <string name="hotel">هتل</string>
    <string name="search">جستجو</string>
    <string name="mabda">مبدا</string>
    <string name="maghsad">مقصد</string>
    <string name="date_safar">تاریخ رفت</string>
    <string name="passengers_number">تعداد مسافران</string>
    <string name="inside_flight">پرواز داخلی</string>
    <string name="forign_flidht">پرواز خارجی</string>
    <string name="day">روز</string>
    <string name="month">ماه</string>
    <string name="End">تمام</string>
    <string name="this_year">۱۳۹۹</string>
    <string name="one">۱</string>
    <string name="shiraz">شیراز</string>
    <string name="login_or_logup">ورود یا ثبت نام</string>
    <string name="bushehr">بوشهر</string>
    <string name="farda">روز بعد</string>
    <string name="dirooz">روز قبل</string>
    <string name="train_information">اطلاعات قطار</string>
    <string name="not_exist_train">در این تاریخ قطاری وجود ندارد</string>
    <string name="MPD_action_done">تمام</string>
    <string name="MPD_action_cancel">لغو</string>
    <string name="MPD_male">مرد</string>
    <string name="MPD_female">زن</string>
    <string name="MPD_empty_message">مفدار نباید خالی باشد</string>
    <string name="MPD_incorrect_message">لطفا گزینه درست را انتخاب کنید</string>
</resources>