<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/button3"
            android:layout_width="96dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="56dp"
            android:background="@drawable/btn_style2"
            android:fontFamily="@font/font1"
            android:text="@string/inside_flight"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/button2"
            android:layout_width="96dp"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_style2"
            android:fontFamily="@font/font1"
            android:text="@string/forign_flidht"
            android:textSize="16dp"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="264dp"
            android:layout_height="53dp"
            android:gravity="center|bottom"
            android:text="@string/flight"
            android:textColor="@color/white"
            android:textSize="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.183" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="40dp">


            <LinearLayout
                android:layout_width="380dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingRight="25dp"
                android:paddingBottom="25dp">

                <TextView
                    android:id="@+id/textView_mabda_airplane"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:drawableRight="@drawable/location"
                    android:gravity="center"
                    android:text="@string/mabda"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="34dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_baraks_airplane"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/baraks" />

                <TextView
                    android:id="@+id/textView_maghsad_airplane"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="15dp"
                    android:drawableRight="@drawable/location"
                    android:gravity="center"
                    android:text="@string/maghsad"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="34dp" />


                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:drawableRight="@drawable/date"
                    android:gravity="center"
                    android:text="@string/date_safar"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="34dp" />


                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:drawableRight="@drawable/passengers_icon"
                    android:gravity="center"
                    android:text="@string/passengers_number"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="34dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="254dp"
        android:layout_height="52dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_style_1"
        android:fontFamily="@font/font1"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.225" />


</androidx.constraintlayout.widget.ConstraintLayout>