<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="show_activitys.Bus_Show_List">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView_list_mabda_bus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:layout_weight=".33"
                    android:text="@string/shiraz" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight=".1"
                    app:srcCompat="@drawable/arrow_right"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/textView_list_maghsad_bus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:layout_weight=".33"
                    android:text="@string/bushehr" />
            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/textView_train_farda_bus"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:background="@drawable/textview_style4"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:text="@string/farda" />
                <TextView
                    android:id="@+id/textView_list_tarikh_bus"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:text="۲۲ مهر ۱۳۷۹" />
                <TextView
                    android:id="@+id/textView_train_dirooz_bus"
                    android:layout_width="wrap_content"
                    android:background="@drawable/textview_style4"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"

                    android:layout_weight=".2"
                    android:text="@string/dirooz" />

            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/recycle_bus_show"
        android:layout_height="match_parent"/>












</LinearLayout>