<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:textSize="40dp"
                android:text="@string/this_year"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">



            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_weight=".5"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:id="@+id/mah_txt"
                android:text="@string/month"
                android:layout_height="wrap_content"/>


            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_weight=".5"
                android:textColor="@color/colorPrimary"
                android:id="@+id/rooz_txt"
                android:textSize="20dp"
                android:text="@string/day"
                android:layout_height="wrap_content"/>

        </LinearLayout>




        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="6dp"
            app:cardCornerRadius="4dp"
            android:layout_height="400dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="match_parent">




                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    app:cardCornerRadius="4dp"
                    android:layout_marginRight="1dp"
                    android:layout_weight=".5"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:id="@+id/recyclerview_month"
                            android:layout_height="match_parent"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    app:cardCornerRadius="4dp"
                    android:layout_marginLeft="1dp"
                    android:layout_weight=".5"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerview_day"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>



            </LinearLayout>
        </androidx.cardview.widget.CardView>



        <Button
            android:layout_width="match_parent"
            android:text="@string/End"
            android:id="@+id/btn_end"
            android:background="@drawable/btn_style_3"
            android:fontFamily="@font/font1"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</ScrollView>